--- a/src/pages/entries/entries.html
+++ b/src/pages/entries/entries.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the EntriesPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar hideBackButton="true">
@@ -24,10 +18,15 @@
     <ion-grid>
       <ion-row>
         <ion-col col-4>
-          <button ion-button icon-only clear><ion-icon name="trash" color="danger"></ion-icon></button>
+          <button ion-button clear small icon-left *ngIf="entry.comment_count" (click)="presentCommentModal(entry)">
+            <ion-icon name="chatbubbles"></ion-icon>
+            <div>{{ entry.comment_count }}</div>
+          </button>
         </ion-col>
         <ion-col col-8 text-right>
-          <button ion-button clear icon-left>Edit</button>
+          <button ion-button icon-only clear small>
+            <ion-icon name="create"></ion-icon>
+          </button>
         </ion-col>
       </ion-row>
     </ion-grid>
