When clicked on entries open editing mode

--- a/src/pages/entries/entries.html
+++ b/src/pages/entries/entries.html
@@ -24,7 +24,7 @@
           </button>
         </ion-col>
         <ion-col col-8 text-right>
-          <button ion-button icon-only clear small>
+          <button ion-button icon-only clear small (click)="editEntry(entry)">
             <ion-icon name="create"></ion-icon>
           </button>
         </ion-col>
