Remove text center class

--- a/src/pages/dolphins/dolphins.html
+++ b/src/pages/dolphins/dolphins.html
@@ -22,7 +22,7 @@
         <ion-icon name="document"></ion-icon>
       </div>
       <ion-card-content>
-        <ion-card-title text-center>{{ dolphin.metaData.name }}</ion-card-title>
+        <ion-card-title>{{ dolphin.metaData.name }}</ion-card-title>
         <p>{{ dolphin.metaData.description }}</p>
       </ion-card-content>
       <ion-row>
