--- a/src/pages/entries/entries.html
+++ b/src/pages/entries/entries.html
@@ -2,7 +2,7 @@
 
   <ion-navbar hideBackButton="true">
     <button ion-button menuToggle><ion-icon name="menu"></ion-icon></button>
-    <ion-title>Entries</ion-title>
+    <ion-title>Posts</ion-title>
   </ion-navbar>
 
 </ion-header>
