--- a/src/pages/dolphin/dolphin.html
+++ b/src/pages/dolphin/dolphin.html
@@ -4,7 +4,7 @@
     <ion-buttons left padding-left>
       <button ion-button icon-only color="white" (click)="dismiss()"><ion-icon name="close"></ion-icon></button>
     </ion-buttons>
-    <ion-title>Dolphin</ion-title>
+    <ion-title>{{ dolphin.metaData.name }}</ion-title>
     <ion-buttons end padding-right>
       <button ion-button icon-only color="white" type="submit" form="tagForm" [disabled]="updating">
         <ion-icon name="checkmark" *ngIf="!updating"></ion-icon>
