Change Dolphins to Files

--- a/src/pages/dolphins/dolphins.html
+++ b/src/pages/dolphins/dolphins.html
@@ -8,7 +8,7 @@
 
   <ion-navbar>
     <button ion-button menuToggle><ion-icon name="menu"></ion-icon></button>
-    <ion-title>Dolphins</ion-title>
+    <ion-title>Files</ion-title>
   </ion-navbar>
 
 </ion-header>
