--- a/src/pages/entries/entries.html
+++ b/src/pages/entries/entries.html
@@ -9,7 +9,10 @@
 
 
 <ion-content padding>
-  <ion-card *ngFor="let entry of entries">
+  <div text-center class="page-loader">
+    <ion-spinner *ngIf="loading"></ion-spinner>
+  </div>
+  <ion-card *ngFor="let entry of entries" class="animated fadeIn">
     <img src="{{ entry.media.cover_image.file }}" *ngIf="entry.media.cover_image">
     <ion-card-content>
       <ion-card-title>{{ entry.title }}</ion-card-title>
