--- a/src/pages/entries/entries.html
+++ b/src/pages/entries/entries.html
@@ -10,7 +10,7 @@
 
 <ion-content padding>
   <!-- Pull To Refresh -->
-  <ion-refresher (ionRefresh)="doRefresh($event)">
+  <ion-refresher (ionRefresh)="reloadPage($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
@@ -18,6 +18,8 @@
   <div text-center class="page-loader">
     <ion-spinner *ngIf="loading" name="dots"></ion-spinner>
   </div>
+
+  <!-- Entries -->
   <ion-card *ngFor="let entry of entries" class="animated fadeIn">
     <img src="{{ entry.media.cover_image.file }}" *ngIf="entry.media.cover_image">
     <ion-card-content>
