Add loading to loadmore

--- a/src/pages/dolphins/dolphins.html
+++ b/src/pages/dolphins/dolphins.html
@@ -61,6 +61,8 @@
 
   <!-- Load More -->
   <div text-center>
-    <button ion-button clear (click)="loadMore()" *ngIf="next" [disabled]="paginating">More</button>
+    <button ion-button clear (click)="loadMore()" *ngIf="next" [disabled]="paginating">
+      <ion-spinner *ngIf="paginating"></ion-spinner><span *ngIf="!paginating">More</span>
+    </button>
   </div>
 </ion-content>
