Change dots loading to default loading

--- a/src/pages/entries/entries.html
+++ b/src/pages/entries/entries.html
@@ -16,7 +16,7 @@
 
   <!-- Loading -->
   <div text-center class="page-loader">
-    <ion-spinner *ngIf="loading" name="dots"></ion-spinner>
+    <ion-spinner *ngIf="loading"></ion-spinner>
   </div>
 
   <!-- Entries -->
