--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -23,7 +23,7 @@
 <ion-content>
   <!-- Loading -->
   <div text-center class="page-loader">
-    <ion-spinner *ngIf="loading" name="dots"></ion-spinner>
+    <ion-spinner *ngIf="loading"></ion-spinner>
   </div>
 
   <!-- Site Settings -->
