--- a/src/pages/dolphin-selection/dolphin-selection.html
+++ b/src/pages/dolphin-selection/dolphin-selection.html
@@ -35,11 +35,11 @@
     <ion-grid>
       <ion-row>
         <ion-col col-6 *ngFor="let dolphin of dolphins" [ngClass]="{'dis-none': !dolphin.isImage }">
-          <ion-card class="animated blur">
+          <ion-card class="animated blur" (click)="select(dolphin)">
             <img src="{{ dolphin.thumbnail_256x256 }}">
             <div class="card-img-container">
-              <button ion-button small clear>{{ dolphin.sizeHuman }}</button>
-              <button ion-button clear small float-right (click)="select(dolphin)"><ion-icon name="checkmark"></ion-icon></button>
+              <button ion-button small clear>{{ dolphin.getExt() }}</button>
+              <button ion-button small clear float-right>{{ dolphin.sizeHuman }}</button>
             </div>
           </ion-card>
         </ion-col>
