--- a/src/pages/entrance/entrance.html
+++ b/src/pages/entrance/entrance.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>Welcome</ion-title>
+    <ion-title>{{ 'WELCOME_TITLE' | translate }}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -11,10 +11,10 @@
   <ion-grid>
     <ion-row>
       <ion-col col-12>
-        <button color="secondary" ion-button round block outline (click)="toLogin()">Login</button>
+        <button color="secondary" ion-button round block outline (click)="toLogin()">{{ 'LOGIN' | translate }}</button>
       </ion-col>
       <ion-col col-12>
-        <button ion-button round block (click)="toSignup()">Signup</button>
+        <button ion-button round block (click)="toSignup()">{{ 'SIGNUP' | translate }}</button>
       </ion-col>
     </ion-row>
   </ion-grid>
