Add platform attrs to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="{{ platform.lang }}" dir="{{ platform.dir }}">
 <head>
   <meta charset="UTF-8">
   <title>Ionic App</title>
