--- a/src/pages/entry/entry.html
+++ b/src/pages/entry/entry.html
@@ -1,17 +1,11 @@
-<!--
-  Generated template for the EntryPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
+    <!--TODO: Translate-->
     <ion-title>Entry</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
+<!--TODO: Pass Entry content into the editor -->
 <ion-content padding>
+  <editor [content]="entry.content"></editor>
 </ion-content>
