--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="{{ platform.lang }}" dir="{{ platform.dir }}">
 <head>
   <meta charset="UTF-8">
-  <title>Ionic App</title>
+  <title>GoNevis Mobile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
