Add function to upload button in dolphin selection view

--- a/src/pages/dolphin-selection/dolphin-selection.html
+++ b/src/pages/dolphin-selection/dolphin-selection.html
@@ -59,6 +59,6 @@
 
   <!-- Upload -->
   <div *ngSwitchCase="'upload'" text-center>
-    <button ion-button>Upload from library</button>
+    <button ion-button (click)="uploadType()">Upload image</button>
   </div>
 </ion-content>
