Change add icon to cloud-upload icon

--- a/src/pages/dolphins/dolphins.html
+++ b/src/pages/dolphins/dolphins.html
@@ -13,7 +13,7 @@
     <ion-title>Files</ion-title>
     <ion-buttons end padding-right>
       <button ion-button icon-only (click)="uploadType()" color="primary">
-        <ion-icon name="add"></ion-icon>
+        <ion-icon name="cloud-upload"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
