--- a/src/pages/reader/reader.html
+++ b/src/pages/reader/reader.html
@@ -43,7 +43,7 @@
     <!-- Buttons -->
     <ion-row>
       <ion-col>
-        <button ion-button icon-left clear small>
+        <button ion-button icon-left clear small (click)="vote(reader)">
           <ion-icon name="thumbs-up"></ion-icon>
           <div>{{ reader.voteCount }}</div>
         </button>
