If reader was voted add class voted

--- a/src/pages/reader/reader.html
+++ b/src/pages/reader/reader.html
@@ -43,7 +43,7 @@
     <!-- Buttons -->
     <ion-row>
       <ion-col>
-        <button ion-button icon-left clear small (click)="vote(reader)">
+        <button ion-button icon-left clear small (click)="vote(reader)" [ngClass]="{'voted': reader.isVoted}">
           <ion-icon name="thumbs-up"></ion-icon>
           <div>{{ reader.voteCount }}</div>
         </button>
