--- a/src/pages/dolphin-selection/dolphin-selection.html
+++ b/src/pages/dolphin-selection/dolphin-selection.html
@@ -26,7 +26,7 @@
 </ion-header>
 
 
-<ion-content padding [ngSwitch]="files">
+<ion-content [ngSwitch]="files">
   <!-- Dolphins -->
   <span *ngSwitchCase="'files'">
     <!-- Loading -->
@@ -35,14 +35,14 @@
     </div>
 
     <!-- Dolphins -->
-    <ion-grid>
+    <ion-grid no-padding style="padding: 1px">
       <ion-row>
         <ion-col col-6 *ngFor="let dolphin of dolphins" [ngClass]="{'dis-none': !dolphin.isImage }">
           <ion-card class="animated blur" (click)="select(dolphin)">
             <img src="{{ dolphin.thumbnail_256x256 }}">
             <div class="card-img-container">
-              <button ion-button small clear>{{ dolphin.getExt() }}</button>
-              <button ion-button small clear float-right>{{ dolphin.sizeHuman }}</button>
+              <button ion-button small clear color="light">{{ dolphin.getExt() }}</button>
+              <button ion-button small clear float-right color="light">{{ dolphin.sizeHuman }}</button>
             </div>
           </ion-card>
         </ion-col>
