--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -56,7 +56,7 @@
         </ion-col>
         <ion-col>
           <button ion-button block type="button" outline (click)="options('logo')">
-            {{ site.media.coverImage ? "change logo" : "set logo" }}
+            {{ site.media.logo ? "change logo" : "set logo" }}
           </button>
         </ion-col>
       </ion-row>
