--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -7,7 +7,9 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <button ion-button menuToggle color="white"><ion-icon name="menu"></ion-icon></button>
+    <button ion-button menuToggle color="white">
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>{{ site.title }}</ion-title>
     <ion-buttons end padding-right>
       <button ion-button icon-only color="white" type="submit" form="siteForm" [disabled]="updating">
@@ -36,7 +38,8 @@
     </ion-item>
     <ion-item>
       <ion-label floating>Description</ion-label>
-      <ion-input [(ngModel)]="site.description" name="description"></ion-input>EventEmitter
+      <ion-input [(ngModel)]="site.description" name="description"></ion-input>
+      EventEmitter
     </ion-item>
     <!-- Checkboxes -->
     <ion-item margin-top no-lines>
@@ -50,12 +53,14 @@
     <ion-grid>
       <ion-row margin-vertical>
         <ion-col>
-          <button ion-button block type="button" (click)="options('coverImage')" outline>
+          <button ion-button block type="button"
+                  (click)="site.media.coverImage ? options('coverImage') : selectImage('coverImage')" outline>
             {{ site.media.coverImage ? "change cover image" : "set cover image" }}
           </button>
         </ion-col>
         <ion-col>
-          <button ion-button block type="button" outline (click)="options('logo')">
+          <button ion-button block type="button" outline
+                  (click)="site.media.logo ? options('logo') : selectImage('logo')">
             {{ site.media.logo ? "change logo" : "set logo" }}
           </button>
         </ion-col>
