--- a/src/pages/dolphin-selection/dolphin-selection.html
+++ b/src/pages/dolphin-selection/dolphin-selection.html
@@ -1,64 +1,54 @@
-<!--
-  Generated template for the DolphinSelectionPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+<ion-header no-shadow>
 
   <ion-navbar color="primary">
     <ion-buttons left padding-left>
-      <button ion-button icon-only (click)="dismiss()"><ion-icon name="close"></ion-icon></button>
+      <button ion-button icon-only (click)="dismiss()"><ion-icon name="arrow-back"></ion-icon></button>
     </ion-buttons>
     <ion-title>Select an image</ion-title>
     <ion-buttons end padding-right>
-      <button ion-button (click)="select(null)">Remove</button>
+      <button ion-button icon-only (click)="uploadType()">
+        <ion-icon name="cloud-upload"></ion-icon>
+      </button>
     </ion-buttons>
   </ion-navbar>
 
-  <ion-toolbar no-border-top color="primary">
-    <ion-segment [(ngModel)]="files" color="white">
-      <ion-segment-button value="files">Files</ion-segment-button>
-      <ion-segment-button value="upload">Upload</ion-segment-button>
-    </ion-segment>
-  </ion-toolbar>
-
 </ion-header>
 
+<ion-content>
+  <!-- Pull To Refresh -->
+  <ion-refresher (ionRefresh)="reloadPage($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
 
-<ion-content [ngSwitch]="files">
-  <!-- Dolphins -->
-  <span *ngSwitchCase="'files'">
-    <!-- Loading -->
-    <div text-center class="page-loader">
-      <ion-spinner *ngIf="loading"></ion-spinner>
-    </div>
-
-    <!-- Dolphins -->
-    <ion-grid no-padding style="padding: 1px">
-      <ion-row>
-        <ion-col col-6 *ngFor="let dolphin of dolphins" [ngClass]="{'dis-none': !dolphin.isImage }">
-          <ion-card class="animated blur" (click)="select(dolphin)">
-            <img src="{{ dolphin.thumbnail_256x256 }}">
-            <div class="card-img-container">
-              <button ion-button small clear color="light">{{ dolphin.getExt() }}</button>
-              <button ion-button small clear float-right color="light">{{ dolphin.sizeHuman }}</button>
-            </div>
-          </ion-card>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-
-    <!-- Load More -->
-    <div text-center>
-      <button ion-button clear (click)="loadMore()" *ngIf="next" [disabled]="paginating">
-        <ion-spinner *ngIf="paginating"></ion-spinner><span *ngIf="!paginating">More</span>
-      </button>
-    </div>
-  </span>
-
-  <!-- Upload -->
-  <div *ngSwitchCase="'upload'" text-center>
-    <button ion-button (click)="uploadType()">Upload image</button>
+  <!-- Loading -->
+  <div text-center class="page-loader">
+    <ion-spinner *ngIf="loading"></ion-spinner>
   </div>
+
+  <!-- Dolphins -->
+  <ion-grid no-padding style="padding: 1px">
+    <ion-row>
+      <ion-col col-6 *ngFor="let dolphin of dolphins" [ngClass]="{'dis-none': !dolphin.isImage }">
+        <ion-card class="animated blur" (click)="select(dolphin)">
+          <img src="{{ dolphin.thumbnail_256x256 }}">
+          <div class="card-img-container">
+            <button ion-button small clear color="light">{{ dolphin.getExt() }}</button>
+            <button ion-button small clear float-right color="light">{{ dolphin.sizeHuman }}</button>
+          </div>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <!-- Load More -->
+  <div text-center>
+    <button ion-button clear (click)="loadMore()" *ngIf="next" [disabled]="paginating">
+      <ion-spinner *ngIf="paginating"></ion-spinner><span *ngIf="!paginating">More</span>
+    </button>
+  </div>
+
+  <!--&lt;!&ndash; Upload &ndash;&gt;-->
+  <!--<div *ngSwitchCase="'upload'" text-center>-->
+    <!--<button ion-button (click)="uploadType()">Upload image</button>-->
+  <!--</div>-->
 </ion-content>
