Change ActionSheet icons and button texts and beautify settings view
code

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -53,8 +53,8 @@
     <ion-grid>
       <ion-row margin-vertical>
         <ion-col>
-          <button ion-button block type="button"
-                  (click)="site.media.coverImage ? options('coverImage') : selectImage('coverImage')" outline>
+          <button ion-button block type="button" outline
+                  (click)="site.media.coverImage ? options('coverImage') : selectImage('coverImage')">
             {{ site.media.coverImage ? "change cover image" : "set cover image" }}
           </button>
         </ion-col>
