Make padding to Dolphins view

--- a/src/pages/dolphins/dolphins.html
+++ b/src/pages/dolphins/dolphins.html
@@ -21,7 +21,7 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content padding>
   <!-- Pull To Refresh -->
   <ion-refresher (ionRefresh)="reloadPage($event)">
     <ion-refresher-content></ion-refresher-content>
