--- a/src/pages/entries/entries.html
+++ b/src/pages/entries/entries.html
@@ -25,7 +25,7 @@
   </div>
 
   <!-- Entries -->
-  <ion-card *ngFor="let entry of entries" class="animated blur">
+  <ion-card *ngFor="let entry of entries" class="animated fadeIn">
     <img src="{{ entry.media.cover_image.file }}" *ngIf="entry.media.cover_image">
     <ion-card-content>
       <ion-card-title>{{ entry.title }}</ion-card-title>
