--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -22,52 +22,53 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content parallax-header>
   <!-- Loading -->
   <div text-center class="page-loader">
-    <ion-spinner *ngIf="loading"></ion-spinner>
+    <ion-spinner *ngIf="loading" [paused]="!loading"></ion-spinner>
   </div>
 
   <!-- Site Settings -->
-  <div class="cover" text-center [style.background-image]="coverImage" *ngIf="site.media.coverImage">
-    <button ion-button class="img-button" icon-only (click)="options('coverImage')">
+  <div class="cover header-image" text-center [style.background-image]="coverImage" [hidden]="!site.media.coverImage"></div>
+  <span class="main-content">
+    <button ion-button class="main-button" icon-only (click)="options('coverImage')" *ngIf="!loading && site.media.coverImage">
       <ion-icon name="image"></ion-icon>
     </button>
-  </div>
-  <form (ngSubmit)="updateSite()" id="siteForm" *ngIf="!loading">
-    <!-- Inputs -->
-    <ion-item>
-      <ion-label floating>Title</ion-label>
-      <ion-input type="text" [(ngModel)]="site.title" name="title"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label floating>Description</ion-label>
-      <ion-input [(ngModel)]="site.description" name="description"></ion-input>
-      EventEmitter
-    </ion-item>
-    <!-- Checkboxes -->
-    <ion-item margin-top no-lines>
-      <ion-label>Allow commenting on my site</ion-label>
-      <ion-toggle [(ngModel)]="site.commenting" name="commenting"></ion-toggle>
-    </ion-item>
-    <ion-item no-lines>
-      <ion-label>Allow voting on my site</ion-label>
-      <ion-toggle [(ngModel)]="site.voting" name="voting"></ion-toggle>
-    </ion-item>
-    <ion-grid>
-      <ion-row margin-vertical>
-        <ion-col *ngIf="!site.media.coverImage">
-          <button ion-button block type="button" outline
-                  (click)="selectImage('coverImage')"> Set cover image
-          </button>
-        </ion-col>
-        <ion-col>
-          <button ion-button block type="button" outline
-                  (click)="site.media.logo ? options('logo') : selectImage('logo')">
-            {{ site.media.logo ? "change" : "set" }} logo
-          </button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </form>
+    <form (ngSubmit)="updateSite()" id="siteForm" *ngIf="!loading">
+      <!-- Inputs -->
+      <ion-item>
+        <ion-label floating>Title</ion-label>
+        <ion-input type="text" [(ngModel)]="site.title" name="title"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>Description</ion-label>
+        <ion-input [(ngModel)]="site.description" name="description"></ion-input>
+        EventEmitter
+      </ion-item>
+          <!-- Checkboxes -->
+      <ion-item margin-top no-lines>
+        <ion-label>Allow commenting on my site</ion-label>
+        <ion-toggle [(ngModel)]="site.commenting" name="commenting"></ion-toggle>
+      </ion-item>
+      <ion-item no-lines>
+        <ion-label>Allow voting on my site</ion-label>
+        <ion-toggle [(ngModel)]="site.voting" name="voting"></ion-toggle>
+      </ion-item>
+      <ion-grid>
+        <ion-row margin-vertical>
+          <ion-col *ngIf="!site.media.coverImage">
+            <button ion-button block type="button" outline
+                    (click)="selectImage('coverImage')"> Set cover image
+            </button>
+          </ion-col>
+          <ion-col>
+            <button ion-button block type="button" outline
+                    (click)="site.media.logo ? options('logo') : selectImage('logo')">
+              {{ site.media.logo ? "change" : "set" }} logo
+            </button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </span>
 </ion-content>
